--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,9 @@
 @font-face {
-  font-family: FSPRO;
-  src: url("/assets/fonts/SF-Pro.dmg");
+  font-family: "SF Pro Text Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("SF Pro Text Regular"),
+    url("/assets/fonts/FontsFree-Net-SFProText-Regular.ttf");
 }
 
 * {
@@ -26,7 +29,7 @@ nav {
       justify-content: space-between;
       padding-right: 2.5rem;
       list-style: none;
-      font-family: FSPRO;
+
       color: #f5f5f7;
       font-size: 12px;
       font-weight: 400;
@@ -58,7 +61,6 @@ nav {
 .red-apple {
   display: flex;
   justify-content: center;
-  border: 2px solid black;
 
   img {
     width: 4.5rem;
@@ -67,7 +69,6 @@ nav {
 }
 
 .holiday-text {
-  border: 2px solid black;
   font-weight: 400;
   font-size: 36px;
   line-height: 25px;
@@ -78,6 +79,7 @@ nav {
 .shop-gifts {
   display: flex;
   justify-content: center;
+
   a {
     font-size: 21px;
     font-weight: 400;
