--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,5 @@
-@font-face {
-  font-family: "SF Pro Text Regular";
-  font-style: normal;
-  font-weight: normal;
-  src: local("SF Pro Text Regular"),
-    url("/assets/fonts/FontsFree-Net-SFProText-Regular.ttf");
-}
+@import "fonts";
+@import "variables";
 
 * {
   margin: 0;
@@ -17,7 +12,7 @@ a {
 
 // ----- nav ----- //
 nav {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   background: #333333;
 
@@ -29,7 +24,7 @@ nav {
       justify-content: space-between;
       padding-right: 2.5rem;
       list-style: none;
-
+      font-family: $main-font;
       color: #f5f5f7;
       font-size: 12px;
       font-weight: 400;
@@ -49,7 +44,7 @@ nav {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-
+    font-family: $main-font;
     a {
       color: #fefbfb;
     }
@@ -58,31 +53,109 @@ nav {
 
 // ----- page 1 ----- //
 
-.red-apple {
-  display: flex;
-  justify-content: center;
+.page-1 {
+  background: #fbedf9;
+  .red-apple {
+    display: flex;
+    justify-content: center;
 
-  img {
-    width: 4.5rem;
+    img {
+      width: 4.5rem;
+      padding-top: 2rem;
+    }
+  }
+
+  .holiday-text {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 25px;
+    display: flex;
+    justify-content: center;
+    font-family: $main-font;
+  }
+
+  .shop-gifts {
+    display: flex;
+    justify-content: center;
+    font-family: $main-font;
+
+    a {
+      font-size: 21px;
+      font-weight: 400;
+      color: #0066cc;
+    }
+  }
+
+  .images-1 {
+    display: flex;
+    justify-content: center;
     padding-top: 2rem;
+    img {
+      width: 400px;
+      height: 400px;
+    }
   }
 }
 
-.holiday-text {
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 25px;
-  display: flex;
-  justify-content: center;
+.page-2 {
+  padding-top: 35px;
+  margin-top: 10px;
+  background-image: url("/assets/img/hero_iphone_13pro__dhnsegysa42u_medium_2x.jpg");
+  height: 70vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  header {
+    display: flex;
+    justify-content: center;
+    font-size: 60px;
+    font-family: $main-font;
+    font-weight: 800;
+  }
+  p {
+    display: flex;
+    justify-content: center;
+    font-family: $main-font;
+    font-size: 25px;
+    padding-top: 10px;
+  }
+  a {
+    color: #0066cc;
+    align-items: flex-end;
+    padding-top: 10px;
+  }
 }
 
-.shop-gifts {
-  display: flex;
-  justify-content: center;
-
+.page-3 {
+  padding-top: 35px;
+  margin-top: 10px;
+  background-image: url("/assets/img/hero_iphone_13__f194u1rdooeq_medium_2x.jpg");
+  height: 70vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  header {
+    display: flex;
+    justify-content: center;
+    font-size: 60px;
+    font-family: $main-font;
+    font-weight: 800;
+    color: white
+  }
+  p {
+    display: flex;
+    justify-content: center;
+    font-family: $main-font;
+    font-size: 25px;
+    padding-top: 10px;
+    color:#E2ACD2;
+  }
   a {
-    font-size: 21px;
-    font-weight: 400;
     color: #0066cc;
+    align-items: flex-end;
+    padding-top: 10px;
   }
 }
