--- a/scss/main.scss
+++ b/scss/main.scss
@@ -143,7 +143,7 @@ nav {
     font-size: 60px;
     font-family: $main-font;
     font-weight: 800;
-    color: white
+    color: white;
   }
   p {
     display: flex;
@@ -151,11 +151,47 @@ nav {
     font-family: $main-font;
     font-size: 25px;
     padding-top: 10px;
-    color:#E2ACD2;
+    color: #e2acd2;
   }
   a {
     color: #0066cc;
     align-items: flex-end;
     padding-top: 10px;
+  }
+}
+
+.page-4 {
+  margin-top:10px;
+  height: 150vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-image: url("/assets/img/tile_macbookpro__cx0ur0qg9biq_medium_2x.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+    background: green;
+  }
+  .div3 {
+    grid-area: 2 / 1 / 3 / 2;
+    background: yellow;
+  }
+  .div4 {
+    grid-area: 2 / 2 / 3 / 3;
+    background: black;
+  }
+  .div5 {
+    grid-area: 3 / 1 / 4 / 2;
+    background: pink;
+  }
+  .div6 {
+    grid-area: 3 / 2 / 4 / 3;
+    background: brown;
   }
 }
