--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,6 +72,7 @@ nav {
     display: flex;
     justify-content: center;
     font-family: $main-font;
+    color: #1d1d1f;
   }
 
   .shop-gifts {
@@ -100,7 +101,7 @@ nav {
 .page-2 {
   padding-top: 35px;
   margin-top: 10px;
-  background-image: url("/assets/img/hero_iphone_13pro__dhnsegysa42u_medium_2x.jpg");
+  background-image: url("/assets/img/hero_iphone_13pro__dhnsegysa42u_largetall.jpg");
   height: 70vh;
   width: 100%;
   background-position: center;
@@ -113,6 +114,7 @@ nav {
     font-size: 60px;
     font-family: $main-font;
     font-weight: 800;
+    color: #1d1d1f;
   }
   p {
     display: flex;
@@ -120,6 +122,7 @@ nav {
     font-family: $main-font;
     font-size: 25px;
     padding-top: 10px;
+    color: #1d1d1f;
   }
   a {
     color: #0066cc;
@@ -131,7 +134,7 @@ nav {
 .page-3 {
   padding-top: 35px;
   margin-top: 10px;
-  background-image: url("/assets/img/hero_iphone_13__f194u1rdooeq_medium_2x.jpg");
+  background-image: url("/assets/img/hero_iphone_13__f194u1rdooeq_largetall.jpg");
   height: 70vh;
   width: 100%;
   background-position: center;
@@ -161,8 +164,8 @@ nav {
 }
 
 .page-4 {
-  margin-top:10px;
-  height: 150vh;
+  margin-top: 10px;
+  height: 160vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -170,28 +173,164 @@ nav {
   grid-row-gap: 10px;
   .div1 {
     grid-area: 1 / 1 / 2 / 2;
-    background-image: url("/assets/img/tile_macbookpro__cx0ur0qg9biq_medium_2x.jpg");
+    background-image: url("/assets/img/tile_macbookpro__cx0ur0qg9biq_large.jpg");
     background-size: cover;
     background-position: center;
+    header {
+      display: flex;
+      justify-content: center;
+      font-size: 60px;
+      font-family: $main-font;
+      font-weight: 800;
+      color: #1d1d1f;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+      font-family: $main-font;
+      font-size: 25px;
+      padding-top: 10px;
+      color: #1d1d1f;
+    }
+    a {
+      color: #0066cc;
+      align-items: flex-end;
+      padding-top: 10px;
+    }
   }
   .div2 {
     grid-area: 1 / 2 / 2 / 3;
-    background: green;
+    background-image: url("/assets/img/tile_airpods__fuv6vgn42y2q_large.jpg");
+    background-size: cover;
+    background-position: center;
+    header {
+      display: flex;
+      justify-content: center;
+      font-size: 60px;
+      font-family: $main-font;
+      font-weight: 800;
+      color: #1d1d1f;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+      font-family: $main-font;
+      font-size: 25px;
+      padding-top: 10px;
+      color: #1d1d1f;
+    }
+    a {
+      color: #0066cc;
+      align-items: flex-end;
+      padding-top: 10px;
+    }
   }
   .div3 {
     grid-area: 2 / 1 / 3 / 2;
-    background: yellow;
+    background-image: url("/assets/img/tile_homepod_mini__b73w4z3ljymu_medium_2x.jpg");
+    background-size: cover;
+    background-position: center;
+    header {
+      display: flex;
+      justify-content: center;
+      font-size: 60px;
+      font-family: $main-font;
+      font-weight: 800;
+      color: #1d1d1f;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+      font-family: $main-font;
+      font-size: 25px;
+      padding-top: 10px;
+      color: #1d1d1f;
+    }
+    a {
+      color: #0066cc;
+      align-items: flex-end;
+      padding-top: 10px;
+    }
   }
   .div4 {
     grid-area: 2 / 2 / 3 / 3;
-    background: black;
+    background-image: url("/assets/img/tile_watch__e9n11b6m6yq2_large.jpg");
+    background-size: cover;
+    background-position: center;
+    header {
+      display: flex;
+      justify-content: center;
+      font-size: 60px;
+      font-family: $main-font;
+      font-weight: 800;
+      color: #1d1d1f;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+      font-family: $main-font;
+      font-size: 25px;
+      padding-top: 10px;
+      color: #1d1d1f;
+    }
+    a {
+      color: #0066cc;
+      align-items: flex-end;
+      padding-top: 10px;
+    }
   }
   .div5 {
     grid-area: 3 / 1 / 4 / 2;
-    background: pink;
+    background-image: url("/assets/img/tile__cauwwcyyn9hy_large.jpg");
+    background-size: cover;
+    background-position: center;
+    header {
+      display: flex;
+      justify-content: center;
+      font-size: 60px;
+      font-family: $main-font;
+      font-weight: 800;
+      color: #1d1d1f;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+      font-family: $main-font;
+      font-size: 25px;
+      padding-top: 10px;
+      color: #1d1d1f;
+    }
+    a {
+      color: #0066cc;
+      align-items: flex-end;
+      padding-top: 10px;
+    }
   }
   .div6 {
     grid-area: 3 / 2 / 4 / 3;
-    background: brown;
+    background-image: url("/assets/img/promo_dickinson__c9ea4l2f5rki_large.jpg");
+    background-size: cover;
+    background-position: center;
+    header {
+      display: flex;
+      justify-content: center;
+      font-size: 60px;
+      font-family: $main-font;
+      font-weight: 800;
+      color: #1d1d1f;
+    }
+    p {
+      display: flex;
+      justify-content: center;
+      font-family: $main-font;
+      font-size: 25px;
+      padding-top: 10px;
+      color: #1d1d1f;
+    }
+    a {
+      color: #0066cc;
+      align-items: flex-end;
+      padding-top: 10px;
+    }
   }
 }
