--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,4 +1,6 @@
 /* fonts setup */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 
 @font-face {
   font-family: "SF Pro Display Regular";
