--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,7 +165,7 @@ nav {
 
 .page-4 {
   margin-top: 10px;
-  height: 160vh;
+  height: 200vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -179,16 +179,17 @@ nav {
     header {
       display: flex;
       justify-content: center;
-      font-size: 60px;
+      font-size: 40px;
       font-family: $main-font;
       font-weight: 800;
       color: #1d1d1f;
+      padding-top: 45px;
     }
     p {
       display: flex;
       justify-content: center;
       font-family: $main-font;
-      font-size: 25px;
+      font-size: 20px;
       padding-top: 10px;
       color: #1d1d1f;
     }
@@ -196,6 +197,7 @@ nav {
       color: #0066cc;
       align-items: flex-end;
       padding-top: 10px;
+      font-size: 15px;
     }
   }
   .div2 {
@@ -206,23 +208,25 @@ nav {
     header {
       display: flex;
       justify-content: center;
-      font-size: 60px;
+      font-size: 40px;
       font-family: $main-font;
       font-weight: 800;
       color: #1d1d1f;
+      padding-top: 420px;
     }
     p {
       display: flex;
       justify-content: center;
       font-family: $main-font;
-      font-size: 25px;
+      font-size: 20px;
       padding-top: 10px;
       color: #1d1d1f;
     }
     a {
       color: #0066cc;
       align-items: flex-end;
-      padding-top: 10px;
+      padding-top: 5px;
+      font-size: 15px;
     }
   }
   .div3 {
@@ -233,16 +237,17 @@ nav {
     header {
       display: flex;
       justify-content: center;
-      font-size: 60px;
+      font-size: 40px;
       font-family: $main-font;
       font-weight: 800;
       color: #1d1d1f;
+      padding-top: 70px;
     }
     p {
       display: flex;
       justify-content: center;
       font-family: $main-font;
-      font-size: 25px;
+      font-size: 15px;
       padding-top: 10px;
       color: #1d1d1f;
     }
@@ -260,23 +265,37 @@ nav {
     header {
       display: flex;
       justify-content: center;
-      font-size: 60px;
+      font-size: 30px;
       font-family: $main-font;
-      font-weight: 800;
+      font-weight: bolder;
       color: #1d1d1f;
+      padding-top: 10px;
+    }
+    .p-top {
+      color: #cf7c4b;
+      font-size: 12px;
+      padding-top: 50px;
     }
     p {
       display: flex;
       justify-content: center;
       font-family: $main-font;
-      font-size: 25px;
-      padding-top: 10px;
       color: #1d1d1f;
+      padding-top: 10px;
+    }
+    .p-middle1 {
+      color: #df8489;
+      font-size: 15px;
+      font-weight: bold;
+    }
+    .p-middle2 {
+      font-size: 20px;
     }
     a {
       color: #0066cc;
       align-items: flex-end;
       padding-top: 10px;
+      font-size: 15px;
     }
   }
   .div5 {
@@ -287,16 +306,17 @@ nav {
     header {
       display: flex;
       justify-content: center;
-      font-size: 60px;
+      font-size: 40px;
       font-family: $main-font;
-      font-weight: 800;
-      color: #1d1d1f;
+      font-weight: 900;
+      color: black;
+      padding-top: 60px;
     }
     p {
       display: flex;
       justify-content: center;
       font-family: $main-font;
-      font-size: 25px;
+      font-size: 20px;
       padding-top: 10px;
       color: #1d1d1f;
     }
@@ -314,23 +334,27 @@ nav {
     header {
       display: flex;
       justify-content: center;
-      font-size: 60px;
-      font-family: $main-font;
+      font-size: 40px;
+      font-family: "Roboto", sans-serif;
       font-weight: 800;
-      color: #1d1d1f;
+      color: #ffffff;
+      padding-top:60px;
     }
-    p {
-      display: flex;
-      justify-content: center;
-      font-family: $main-font;
-      font-size: 25px;
-      padding-top: 10px;
-      color: #1d1d1f;
+    img {
+      padding-top: 250px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      
     }
     a {
       color: #0066cc;
       align-items: flex-end;
       padding-top: 10px;
+      display: flex;
+      justify-content: center;
+      color: #F8FAFC;
+      font-size: 20px;;
     }
   }
 }
