--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,12 @@
 @import "fonts";
 @import "variables";
+@import "nav";
+@import "page1";
+@import "page2";
+@import "page3";
+@import "page4";
+@import "page4";
+@import "footer";
 
 * {
   margin: 0;
@@ -11,371 +18,18 @@ a {
 }
 
 // ----- nav ----- //
-nav {
-  width: 100%;
-  text-align: center;
-  background: #333333;
-
-  ul {
-    display: flex;
-    justify-content: center;
-
-    li {
-      justify-content: space-between;
-      padding-right: 2.5rem;
-      list-style: none;
-      font-family: $main-font;
-      color: #f5f5f7;
-      font-size: 12px;
-      font-weight: 400;
-      line-height: 44px;
-    }
-  }
-}
-
-.red-strip {
-  background: #e34140;
-  height: 4.5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  p {
-    color: white;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
-    font-family: $main-font;
-    a {
-      color: #fefbfb;
-    }
-  }
-}
 
 // ----- page 1 ----- //
 
-.page-1 {
-  background: #fbedf9;
-  .red-apple {
-    display: flex;
-    justify-content: center;
+// ----- page2 ----- //
 
-    img {
-      width: 4.5rem;
-      padding-top: 2rem;
-    }
-  }
+// ----- page 3 ----- //
 
-  .holiday-text {
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 25px;
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    color: #1d1d1f;
-  }
 
-  .shop-gifts {
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
 
-    a {
-      font-size: 21px;
-      font-weight: 400;
-      color: #0066cc;
-    }
-  }
+// ------ page4 ------ //
 
-  .images-1 {
-    display: flex;
-    justify-content: center;
-    padding-top: 2rem;
-    img {
-      width: 400px;
-      height: 400px;
-    }
-  }
-}
 
-.page-2 {
-  padding-top: 35px;
-  margin-top: 10px;
-  background-image: url("/assets/img/hero_iphone_13pro__dhnsegysa42u_largetall.jpg");
-  height: 70vh;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 
-  header {
-    display: flex;
-    justify-content: center;
-    font-size: 60px;
-    font-family: $main-font;
-    font-weight: 800;
-    color: #1d1d1f;
-  }
-  p {
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    font-size: 25px;
-    padding-top: 10px;
-    color: #1d1d1f;
-  }
-  a {
-    color: #0066cc;
-    align-items: flex-end;
-    padding-top: 10px;
-  }
-}
+// ------ footer ----- //
 
-.page-3 {
-  padding-top: 35px;
-  margin-top: 10px;
-  background-image: url("/assets/img/hero_iphone_13__f194u1rdooeq_largetall.jpg");
-  height: 70vh;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  header {
-    display: flex;
-    justify-content: center;
-    font-size: 60px;
-    font-family: $main-font;
-    font-weight: 800;
-    color: white;
-  }
-  p {
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    font-size: 25px;
-    padding-top: 10px;
-    color: #e2acd2;
-  }
-  a {
-    color: #0066cc;
-    align-items: flex-end;
-    padding-top: 10px;
-  }
-}
-
-.page-4 {
-  margin-top: 10px;
-  height: 200vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  .div1 {
-    grid-area: 1 / 1 / 2 / 2;
-    background-image: url("/assets/img/tile_macbookpro__cx0ur0qg9biq_large.jpg");
-    background-size: cover;
-    background-position: center;
-    header {
-      display: flex;
-      justify-content: center;
-      font-size: 40px;
-      font-family: $main-font;
-      font-weight: 800;
-      color: #1d1d1f;
-      padding-top: 45px;
-    }
-    p {
-      display: flex;
-      justify-content: center;
-      font-family: $main-font;
-      font-size: 20px;
-      padding-top: 10px;
-      color: #1d1d1f;
-    }
-    a {
-      color: #0066cc;
-      align-items: flex-end;
-      padding-top: 10px;
-      font-size: 15px;
-    }
-  }
-  .div2 {
-    grid-area: 1 / 2 / 2 / 3;
-    background-image: url("/assets/img/tile_airpods__fuv6vgn42y2q_large.jpg");
-    background-size: cover;
-    background-position: center;
-    header {
-      display: flex;
-      justify-content: center;
-      font-size: 40px;
-      font-family: $main-font;
-      font-weight: 800;
-      color: #1d1d1f;
-      padding-top: 420px;
-    }
-    p {
-      display: flex;
-      justify-content: center;
-      font-family: $main-font;
-      font-size: 20px;
-      padding-top: 10px;
-      color: #1d1d1f;
-    }
-    a {
-      color: #0066cc;
-      align-items: flex-end;
-      padding-top: 5px;
-      font-size: 15px;
-    }
-  }
-  .div3 {
-    grid-area: 2 / 1 / 3 / 2;
-    background-image: url("/assets/img/tile_homepod_mini__b73w4z3ljymu_medium_2x.jpg");
-    background-size: cover;
-    background-position: center;
-    header {
-      display: flex;
-      justify-content: center;
-      font-size: 40px;
-      font-family: $main-font;
-      font-weight: 800;
-      color: #1d1d1f;
-      padding-top: 70px;
-    }
-    p {
-      display: flex;
-      justify-content: center;
-      font-family: $main-font;
-      font-size: 15px;
-      padding-top: 10px;
-      color: #1d1d1f;
-    }
-    a {
-      color: #0066cc;
-      align-items: flex-end;
-      padding-top: 10px;
-    }
-  }
-  .div4 {
-    grid-area: 2 / 2 / 3 / 3;
-    background-image: url("/assets/img/tile_watch__e9n11b6m6yq2_large.jpg");
-    background-size: cover;
-    background-position: center;
-    header {
-      display: flex;
-      justify-content: center;
-      font-size: 30px;
-      font-family: $main-font;
-      font-weight: bolder;
-      color: #1d1d1f;
-      padding-top: 10px;
-    }
-    .p-top {
-      color: #cf7c4b;
-      font-size: 12px;
-      padding-top: 50px;
-    }
-    p {
-      display: flex;
-      justify-content: center;
-      font-family: $main-font;
-      color: #1d1d1f;
-      padding-top: 10px;
-    }
-    .p-middle1 {
-      color: #df8489;
-      font-size: 15px;
-      font-weight: bold;
-    }
-    .p-middle2 {
-      font-size: 20px;
-    }
-    a {
-      color: #0066cc;
-      align-items: flex-end;
-      padding-top: 10px;
-      font-size: 15px;
-    }
-  }
-  .div5 {
-    grid-area: 3 / 1 / 4 / 2;
-    background-image: url("/assets/img/tile__cauwwcyyn9hy_large.jpg");
-    background-size: cover;
-    background-position: center;
-    header {
-      display: flex;
-      justify-content: center;
-      font-size: 40px;
-      font-family: $main-font;
-      font-weight: 900;
-      color: black;
-      padding-top: 60px;
-    }
-    p {
-      display: flex;
-      justify-content: center;
-      font-family: $main-font;
-      font-size: 20px;
-      padding-top: 10px;
-      color: #1d1d1f;
-    }
-    a {
-      color: #0066cc;
-      align-items: flex-end;
-      padding-top: 10px;
-    }
-  }
-  .div6 {
-    grid-area: 3 / 2 / 4 / 3;
-    background-image: url("/assets/img/promo_dickinson__c9ea4l2f5rki_large.jpg");
-    background-size: cover;
-    background-position: center;
-    header {
-      display: flex;
-      justify-content: center;
-      font-size: 40px;
-      font-family: "Roboto", sans-serif;
-      font-weight: 800;
-      color: #ffffff;
-      padding-top:60px;
-    }
-    img {
-      padding-top: 250px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      
-    }
-    a {
-      color: #0066cc;
-      align-items: flex-end;
-      padding-top: 10px;
-      display: flex;
-      justify-content: center;
-      color: #F8FAFC;
-      font-size: 20px;;
-    }
-  }
-}
-
-footer {
-  // display: flex;
-  // justify-content: center;
-  margin-top: 10px;
-  background-color: #F5F5F7;
-  p {
-    font-family: $main-font;
-    font-size: 12px;
-    line-height: 16px;
-    color: #6e6e73;
-    padding-top: 8px;
-    a {
-      color: #6e6e73;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  }
-
-}
