--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,14 +1,13 @@
 /* fonts setup */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-
-@font-face {
-  font-family: "SF Pro Display Regular";
-  font-style: normal;
-  font-weight: normal;
-  src: local("SF Pro Display Regular"),
-    url("/assets/fonts/SFPRODISPLAYREGULAR.woff") format("woff");
-}
+// @font-face {
+//   font-family: "SF Pro Display Regular";
+//   font-style: normal;
+//   font-weight: normal;
+//   src: local("SF Pro Display Regular"),
+//     url("/assets/fonts/SFProDisplayRegular.woff2") format("woff");
+// }
 
 @font-face {
   font-family: "SF Pro Display Ultralight Italic";
