--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import "page4";
 @import "page4";
 @import "footer";
+@import "accessories";
 
 * {
   margin: 0;
@@ -16,20 +17,3 @@
 a {
   text-decoration: none;
 }
-
-// ----- nav ----- //
-
-// ----- page 1 ----- //
-
-// ----- page2 ----- //
-
-// ----- page 3 ----- //
-
-
-
-// ------ page4 ------ //
-
-
-
-// ------ footer ----- //
-
