--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -24,6 +24,9 @@ nav {
       font-weight: 400;
       line-height: 44px;
       cursor: pointer;
+      a {
+        color: #dfdfe0;
+      }
     }
     li:hover {
       color: #ffffff;
