--- a/scss/accessories.scss
+++ b/scss/accessories.scss
@@ -54,6 +54,7 @@ nav {
   background-color: white;
   height: 6vh;
   align-items: center;
+  z-index: 1;
 
   p {
     font-size: 24px;
@@ -184,13 +185,13 @@ nav {
       position: relative;
       p {
         position: absolute;
-        top:175px;
-        right: -85%;
+        top: 175px;
+        left: -92%;
       }
       div {
-        border: 1px solid #333333;
-        height: 150px;
-        width: 150px;
+        border: 0.5px solid #333333;
+        height: 140px;
+        width: 140px;
         border-radius: 50%;
         text-align: center;
         align-content: center;
@@ -198,16 +199,20 @@ nav {
         position: relative;
         img {
           position: absolute;
-          top: 33px;
-          right: 38px;
+          top: 30px;
+          right: 33px;
         }
       }
     }
-    a{
-      p{
-      color:#2484D1;
-      padding-top:27px;
-    }} 
+    a {
+      p {
+        color: #2484d1;
+        padding-top: 27px;
+      }
+      p:hover {
+        text-decoration: underline;
+      }
+    }
   }
   #border-top {
     border-top: 1px solid #333333;
@@ -224,7 +229,6 @@ nav {
     bottom: 0;
     left: 645px;
     width: 455px;
-   
   }
   #border-bottom-right {
     border-top: 1px solid #333333;
@@ -233,6 +237,143 @@ nav {
     bottom: 0;
     left: 0px;
     width: 450px;
-    
+  }
+}
+
+// ----- page4 ----- //
+
+.page4 {
+  height: 150vh;
+
+  header {
+    display: flex;
+    justify-content: center;
+    padding-top: 70px;
+    font-size: 40px;
+    color: #333333;
+    font-weight: 800;
+    font-family: $main-font;
+  }
+
+  .parent-top {
+    padding-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    width: 58vw;
+    margin: 0 auto;
+    height: 700px;
+
+    .div1 {
+      grid-area: 1 / 1 / 2 / 2;
+      background-image: url("/assets/img/access/MM2D3.png");
+      background-position: center 100px;
+      background-repeat: no-repeat;
+      background-color: #f2f2f2;
+      background-size: contain;
+      position: relative;
+
+      .p-couple {
+        text-align: center;
+        position: absolute;
+        bottom: 60px;
+        left: 60px;
+
+        p {
+          font-family: $main-font;
+          padding-bottom: 15px;
+          font-size: 17px;
+        }
+        .new {
+          color: #e85d00;
+          font-size: 13px;
+          font-weight: 400;
+        }
+      }
+    }
+    .div2 {
+      grid-area: 1 / 2 / 2 / 4;
+      background-image: url("/assets/img/access/MM163_FV101.png");
+      background-position: center 40px;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-color: #f2f2f2;
+      position: relative;
+      .p-couple {
+        text-align: center;
+        position: absolute;
+        bottom: 60px;
+        left: 225px;
+
+        p {
+          font-family: $main-font;
+          padding-bottom: 15px;
+          font-size: 17px;
+        }
+        .new {
+          color: #e85d00;
+          font-size: 13px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+
+  .parent-bottom {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    height: 500px;
+    width: 58vw;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-image: url("/assets/img/access/airtag-single-select-202104.png");
+    background-repeat: no-repeat;
+    background-color: #f2f2f2;
+    background-size: 275px 300px;
+    background-position: 50% 50px;
+    position:relative;
+
+    .p-couple {
+      text-align: center;
+      position: absolute;
+      bottom: 60px;
+      left: 135px;
+
+      p {
+        font-family: $main-font;
+        padding-bottom: 15px;
+        font-size: 17px;
+      }
+      .new {
+        color: #e85d00;
+        font-size: 13px;
+        font-weight: 400;
+      }
+    }
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+    background-image: url("/assets/img/access/ML5L3ref_FV535.png");
+    background-repeat: no-repeat;
+    background-color: #f2f2f2;
+    background-size: 250px 300px;
+    background-position: 50% 50px;
+  }
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+    background-image: url("/assets/img/access/MM6J3_FV102.png");
+    background-repeat: no-repeat;
+    background-color: #f2f2f2;
+    background-size: 250px 300px;
+    background-position: 50% 50px;
   }
 }
