--- a/scss/accessories.scss
+++ b/scss/accessories.scss
@@ -340,17 +340,17 @@ nav {
     background-color: #f2f2f2;
     background-size: 275px 300px;
     background-position: 50% 50px;
-    position:relative;
+    position: relative;
 
     .p-couple {
       text-align: center;
       position: absolute;
-      bottom: 60px;
+      bottom: 38px;
       left: 135px;
 
       p {
         font-family: $main-font;
-        padding-bottom: 15px;
+        padding-bottom: 10px;
         font-size: 17px;
       }
       .new {
@@ -367,6 +367,25 @@ nav {
     background-color: #f2f2f2;
     background-size: 250px 300px;
     background-position: 50% 50px;
+    position: relative;
+
+    .p-couple {
+      text-align: center;
+      position: absolute;
+      bottom: 38px;
+      left: 110px;
+
+      p {
+        font-family: $main-font;
+        padding-bottom: 8px;
+        font-size: 17px;
+      }
+      .new {
+        color: #e85d00;
+        font-size: 13px;
+        font-weight: 400;
+      }
+    }
   }
   .div3 {
     grid-area: 1 / 3 / 2 / 4;
@@ -375,5 +394,221 @@ nav {
     background-color: #f2f2f2;
     background-size: 250px 300px;
     background-position: 50% 50px;
+    position: relative;
+    .p-couple {
+      text-align: center;
+      position: absolute;
+      bottom: 38px;
+      left: 110px;
+
+      p {
+        font-family: $main-font;
+        padding-bottom: 8px;
+        font-size: 17px;
+      }
+      .new {
+        color: #e85d00;
+        font-size: 13px;
+        font-weight: 400;
+      }
+    }
+  }
+
+  .shop {
+    text-align: center;
+    margin-top: 30px;
+    font-family: $access-font;
+    font-size: 17px;
+    color: #0070c9;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+// ----- page5 ----- //
+
+.page5 {
+  // height: 100vh;
+  margin-top: 160px;
+
+  header {
+    font-size: 40px;
+    font-weight: 700;
+    font-family: $main-font;
+    color: #333333;
+    text-align: center;
+  }
+
+  .parent-bottom {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    height: 500px;
+    width: 58vw;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-image: url("/assets/img/access/MME73.png");
+    background-repeat: no-repeat;
+    background-color: #f2f2f2;
+    background-size: 275px 300px;
+    background-position: 50% 50px;
+    position: relative;
+
+    .p-couple {
+      text-align: center;
+      position: absolute;
+      bottom: 38px;
+      left: 80px;
+
+      p {
+        font-family: $main-font;
+        padding-bottom: 10px;
+        font-size: 17px;
+      }
+      .new {
+        color: #e85d00;
+        font-size: 13px;
+        font-weight: 400;
+      }
+    }
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+    background-image: url("/assets/img/access/MWP22.png");
+    background-repeat: no-repeat;
+    background-color: #f2f2f2;
+    background-size: 250px 300px;
+    background-position: 50% 50px;
+    position: relative;
+
+    .p-couple {
+      text-align: center;
+      position: absolute;
+      bottom: 38px;
+      left: 140px;
+
+      p {
+        font-family: $main-font;
+        padding-bottom: 8px;
+        font-size: 17px;
+      }
+      .new {
+        color: #e85d00;
+        font-size: 13px;
+        font-weight: 400;
+      }
+    }
+  }
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+    background-image: url("/assets/img/access/airpods-max-select-silver-202011.png");
+    background-repeat: no-repeat;
+    background-color: #f2f2f2;
+    background-size: 250px 300px;
+    background-position: 50% 50px;
+    position: relative;
+    .p-couple {
+      text-align: center;
+      position: absolute;
+      bottom: 38px;
+      left: 110px;
+
+      p {
+        font-family: $main-font;
+        padding-bottom: 8px;
+        font-size: 17px;
+      }
+      .new {
+        color: #e85d00;
+        font-size: 13px;
+        font-weight: 400;
+      }
+    }
+  }
+  .shop {
+    text-align: center;
+    margin-top: 30px;
+    font-family: $access-font;
+    font-size: 17px;
+    color: #0070c9;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+// ----- page6 ----- //
+
+.page6 {
+  background: #fbedf9;
+  
+  width: 58vw;
+  margin: 0 auto;
+  margin-top: 100px;
+  .red-strip {
+    background: #e34140;
+    height: 4.5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    p {
+      color: white;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      font-family: $main-font;
+      a {
+        color: #fefbfb;
+        cursor: pointer;
+      }
+    }
+  }
+  
+  
+
+  .holiday-text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+    display: flex;
+    justify-content: center;
+    font-family: $main-font;
+    color: #1d1d1f;
+    padding-top: 50px;
+  }
+
+  .shop-gifts {
+    display: flex;
+    justify-content: center;
+    font-family: $main-font;
+    padding-top: 25px;
+
+    a {
+      font-size: 21px;
+      font-weight: 400;
+      color: #0066cc;
+    }
+  }
+
+  .images-1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+    img {
+      width: 300px;
+      height: 300px;
+    }
   }
 }
