--- a/scss/_footer_acc.scss
+++ b/scss/_footer_acc.scss
@@ -1,18 +1,7 @@
 footer {
-  margin-top: 10px;
-  background-color: #f5f5f7;
+  background-color: #fbedf9;
   color: #1d1d1f;
 
-  .container {
-    width: 56vw;
-    margin: 0 auto;
-    border-bottom: 1px solid #86868b;
-    .text-container {
-      display: flex;
-      justify-content: center;
-      height: 20vh;
-    }
-  }
   .link-container {
     display: flex;
     justify-content: space-between;
