--- a/scss/accessories.scss
+++ b/scss/accessories.scss
@@ -1,5 +1,15 @@
 @import "fonts";
 @import "variables";
+@import "page1_acc";
+@import "page2_acc";
+@import "page3_acc";
+@import "page4_acc";
+@import "page5_acc";
+@import "page6_acc";
+@import "page7_acc";
+@import "page8_acc";
+@import "page9_acc";
+@import "page10_acc";
 
 * {
   margin: 0;
@@ -72,769 +82,15 @@ nav {
   }
 }
 
-// ----- page1 ----- //
 
-.page1 {
-  background-image: url("/assets/img/access/airpods-header-accessories-202110.jfif");
-  background-position: 600px 400px;
-  background-size: 80%;
-  height: 43vh;
-  .container {
-    font-family: $main-font;
-    padding-left: 455px;
-    padding-top: 40px;
-    div {
-      padding-top: 20px;
-    }
-  }
-  .p-top {
-    color: #bf4800;
-    font-size: 24px;
-    font-weight: bold;
-    // padding-bottom:10px;
-  }
-  header {
-    color: #333333;
-    font-size: 48px;
-    font-weight: bold;
-  }
-
-  .p-middle {
-    font-size: 22px;
-    color: #333333;
-    font-weight: 100;
-  }
-  a {
-    font-size: 22px;
-    color: #0070c9;
-  }
-}
-
-// ----- page2 ----- //
-
-.page2 {
-  header {
-    text-align: center;
-    font-family: $main-font;
-    font-size: 30px;
-    font-weight: 400;
-    color: #333333;
-    padding-top: 45px;
-  }
-
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
-  }
-
-  input[type="search"] {
-    width: 725px;
-    height: 75px;
-    padding: 12px 40px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    font-size: 24px;
-    font-weight: 100;
-    border-radius: 10px;
-  }
-
-  .fontuser {
-    position: relative;
-  }
-
-  .fontuser i {
-    position: absolute;
-    left: 15px;
-    top: 37px;
-    color: gray;
-  }
-}
-
-// ----- page3 ------ //
-
-.page3 {
-  padding-top: 50px;
-
-  p {
-    font-size: 17px;
-    color: #333333;
-    font-family: $main-font;
-    display: flex;
-    justify-content: center;
-
-    width: 400px;
-    margin: 0 auto;
-  }
-  .category-container {
-    margin: 0 auto;
-    margin-top: 20px;
-    width: 1100px;
-    border-top: 1px solid #333333;
-    position: relative;
-    height: 33vh;
-    // border: 2px solid black;
-    .images-container {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      height: 270px;
-      position: relative;
-      p {
-        position: absolute;
-        top: 175px;
-        left: -92%;
-      }
-      div {
-        border: 0.5px solid #333333;
-        height: 140px;
-        width: 140px;
-        border-radius: 50%;
-        text-align: center;
-        align-content: center;
-        align-items: center;
-        position: relative;
-        img {
-          position: absolute;
-          top: 30px;
-          right: 33px;
-        }
-      }
-    }
-    a {
-      p {
-        color: #2484d1;
-        padding-top: 27px;
-      }
-      p:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-  #border-top {
-    border-top: 1px solid #333333;
-    position: absolute;
-    top: 0%;
-    bottom: 0;
-    left: 375px;
-    width: 170px;
-  }
-  #border-bottom-left {
-    border-bottom: 1px solid #333333;
-    position: absolute;
-    top: 105.5%;
-    bottom: 0;
-    left: 645px;
-    width: 455px;
-  }
-  #border-bottom-right {
-    border-top: 1px solid #333333;
-    position: absolute;
-    top: 106%;
-    bottom: 0;
-    left: 0px;
-    width: 450px;
-  }
-}
-
-// ----- page4 ----- //
-
-.page4 {
-  height: 150vh;
-
-  header {
-    display: flex;
-    justify-content: center;
-    padding-top: 70px;
-    font-size: 40px;
-    color: #333333;
-    font-weight: 800;
-    font-family: $main-font;
-  }
-
-  .parent-top {
-    padding-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    width: 58vw;
-    margin: 0 auto;
-    height: 700px;
-
-    .div1 {
-      grid-area: 1 / 1 / 2 / 2;
-      background-image: url("/assets/img/access/MM2D3.png");
-      background-position: center 100px;
-      background-repeat: no-repeat;
-      background-color: #f2f2f2;
-      background-size: contain;
-      position: relative;
-
-      .p-couple {
-        text-align: center;
-        position: absolute;
-        bottom: 60px;
-        left: 60px;
-
-        p {
-          font-family: $main-font;
-          padding-bottom: 15px;
-          font-size: 17px;
-        }
-        .new {
-          color: #e85d00;
-          font-size: 13px;
-          font-weight: 400;
-        }
-      }
-    }
-    .div2 {
-      grid-area: 1 / 2 / 2 / 4;
-      background-image: url("/assets/img/access/MM163_FV101.png");
-      background-position: center 40px;
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-color: #f2f2f2;
-      position: relative;
-      .p-couple {
-        text-align: center;
-        position: absolute;
-        bottom: 60px;
-        left: 225px;
-
-        p {
-          font-family: $main-font;
-          padding-bottom: 15px;
-          font-size: 17px;
-        }
-        .new {
-          color: #e85d00;
-          font-size: 13px;
-          font-weight: 400;
-        }
-      }
-    }
-  }
-
-  .parent-bottom {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    height: 500px;
-    width: 58vw;
-    margin: 0 auto;
-    margin-top: 10px;
-  }
-
-  .div1 {
-    grid-area: 1 / 1 / 2 / 2;
-    background-image: url("/assets/img/access/airtag-single-select-202104.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 275px 300px;
-    background-position: 50% 50px;
-    position: relative;
-
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 135px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 10px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .div2 {
-    grid-area: 1 / 2 / 2 / 3;
-    background-image: url("/assets/img/access/ML5L3ref_FV535.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 250px 300px;
-    background-position: 50% 50px;
-    position: relative;
-
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 110px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 8px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .div3 {
-    grid-area: 1 / 3 / 2 / 4;
-    background-image: url("/assets/img/access/MM6J3_FV102.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 250px 300px;
-    background-position: 50% 50px;
-    position: relative;
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 110px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 8px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-
-  .shop {
-    text-align: center;
-    margin-top: 30px;
-    font-family: $access-font;
-    font-size: 17px;
-    color: #0070c9;
-    cursor: pointer;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-// ----- page5 ----- //
-
-.page5 {
-  // height: 100vh;
-  margin-top: 160px;
-
-  header {
-    font-size: 40px;
-    font-weight: 700;
-    font-family: $main-font;
-    color: #333333;
-    text-align: center;
-  }
-
-  .parent-bottom {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    height: 500px;
-    width: 58vw;
-    margin: 0 auto;
-    margin-top: 10px;
-  }
-
-  .div1 {
-    grid-area: 1 / 1 / 2 / 2;
-    background-image: url("/assets/img/access/MME73.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 275px 300px;
-    background-position: 50% 50px;
-    position: relative;
-
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 80px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 10px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .div2 {
-    grid-area: 1 / 2 / 2 / 3;
-    background-image: url("/assets/img/access/MWP22.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 250px 300px;
-    background-position: 50% 50px;
-    position: relative;
-
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 140px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 8px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .div3 {
-    grid-area: 1 / 3 / 2 / 4;
-    background-image: url("/assets/img/access/airpods-max-select-silver-202011.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 250px 300px;
-    background-position: 50% 50px;
-    position: relative;
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 110px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 8px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .shop {
-    text-align: center;
-    margin-top: 30px;
-    font-family: $access-font;
-    font-size: 17px;
-    color: #0070c9;
-    cursor: pointer;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-// ----- page6 ----- //
-
-.page6 {
-  background: #fbedf9;
-
-  width: 58vw;
-  margin: 0 auto;
-  margin-top: 100px;
-
-  .holiday-text {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 25px;
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    color: #1d1d1f;
-    padding-top: 50px;
-  }
-
-  .shop-gifts {
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    padding-top: 25px;
-
-    a {
-      font-size: 21px;
-      font-weight: 400;
-      color: #0066cc;
-    }
-  }
-
-  .images-1 {
-    display: flex;
-    justify-content: center;
-    padding-top: 2rem;
-    img {
-      width: 300px;
-      height: 300px;
-    }
-  }
-}
-
-.page7 {
-  margin-top: 140px;
-
-  header {
-    font-size: 40px;
-    font-weight: 700;
-    font-family: $main-font;
-    color: #333333;
-    text-align: center;
-  }
-
-  .parent-bottom {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    height: 500px;
-    width: 58vw;
-    margin: 0 auto;
-    margin-top: 10px;
-  }
-
-  .div1 {
-    grid-area: 1 / 1 / 2 / 2;
-    background-image: url("/assets/img/access/MJWY3.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 275px 300px;
-    background-position: 50% 50px;
-    position: relative;
-
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 50px;
-      left: 90px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 10px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .div2 {
-    grid-area: 1 / 2 / 2 / 3;
-    background-image: url("/assets/img/access/HPPL2.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 250px 300px;
-    background-position: 50% 50px;
-    position: relative;
-
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 27px;
-      left: 70px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 8px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .div3 {
-    grid-area: 1 / 3 / 2 / 4;
-    background-image: url("/assets/img/access/MU8F2.png");
-    background-repeat: no-repeat;
-    background-color: #f2f2f2;
-    background-size: 250px 300px;
-    background-position: 50% 50px;
-    position: relative;
-    .p-couple {
-      text-align: center;
-      position: absolute;
-      bottom: 38px;
-      left: 110px;
-
-      p {
-        font-family: $main-font;
-        padding-bottom: 8px;
-        font-size: 17px;
-      }
-      .new {
-        color: #e85d00;
-        font-size: 13px;
-        font-weight: 400;
-      }
-    }
-  }
-  .shop {
-    text-align: center;
-    margin-top: 30px;
-    font-family: $access-font;
-    font-size: 17px;
-    color: #0070c9;
-    cursor: pointer;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-// ----- page8 ----- //
-.page8 {
-  background: #fbedf9;
-  width: 58vw;
-  margin: 0 auto;
-  margin-top: 100px;
-
-  .p-couple {
-    text-align: center;
-    padding-top: 20px;
-    p {
-      font-family: $main-font;
-      padding-bottom: 8px;
-      font-size: 17px;
-    }
-  }
-
-  .holiday-text {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 25px;
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    color: #333333;
-    padding-top: 50px;
-  }
-
-  .shop-gifts {
-    display: flex;
-    justify-content: center;
-    font-family: $main-font;
-    padding-top: 25px;
-
-    a {
-      font-size: 17px;
-      font-weight: 400;
-      color: #0066cc;
-    }
-  }
-
-  .images-1 {
-    display: flex;
-    justify-content: center;
-    padding-top: 2rem;
-    img {
-      width: 100%;
-      height: 250px;
-    }
-  }
-}
-
-.page9 {
-  padding-top: 50px;
-  width: 100%;
-  background-color: #fbedf9;
-  margin-top: 10px;
-  padding-bottom: 50px;
-
-  section {
-    display: flex;
-    justify-content: space-between;
-    width: 50vw;
-    text-align: center;
-    margin: 0 auto;
-
-    div {
-      text-align: center;
-      line-height: 25px;
-      padding-left: 120px;
-    }
-    header {
-      padding-top: 15px;
-      font-family: $main-font;
-      font-size: 19px;
-      font-weight: 600;
-      color: #1d1d1f;
-    }
-
-    p {
-      font-family: $access-font;
-      font-size: 14px;
-      font-weight: 400;
-      color: #626264;
-    }
-    a {
-      padding-top: 20px;
-      font-family: $access-font;
-      font-size: 14px;
-      color: #0066cc;
-    }
-    i {
-      color: #838388;
-    }
-  }
-}
-
-.page10 {
-  background-color: #fbedf9;
-
-  section {
-    width: 56vw;
-    margin: 0 auto;
-    font-size: 14px;
-    font-family: $access-font;
-    line-height: 19px;
-    color: #86868b;
-    border-top: 1px solid #86868b;
-    border-bottom: 1px solid #86868b;
-
-    p {
-      padding-top: 15px;
-      padding-bottom: 15px;
-    }
-  }
-}
 
 footer {
-  
-  background-color: #FBEDF9;
+  background-color: #fbedf9;
   color: #1d1d1f;
 
-  
   .link-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding-top: 20px;
     width: 56vw;
     margin: 0 auto;
@@ -844,19 +100,13 @@ footer {
       padding-bottom: 10px;
     }
   }
-  hr {
-    width: 980px;
-    position: relative;
-    left: 465px;
-  }
+
   header {
     font-size: 12px;
     font-weight: bold;
-  }
-
-  header {
     font-family: $main-font;
   }
+
   .two {
     padding-left: 70px;
   }
@@ -874,9 +124,8 @@ footer {
     }
   }
   .more {
-    display: flex;
-    justify-content: center;
-    padding-right: 470px;
+    width: 56vw;
+    margin: 0 auto;
     padding-bottom: 10px;
     a {
       color: blue;
@@ -884,13 +133,12 @@ footer {
   }
   .bottom {
     display: flex;
-    justify-content: center;
-    p {
-      padding-right: 39px;
-    }
+    justify-content: space-between;
+    width: 56vw;
+    margin: 0 auto;
     .policies {
       display: flex;
-      align-content: flex-end;
+      align-content: space-around;
       li {
         font-family: $main-font;
         font-size: 12px;
